starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__if_expr__tests__if_else.snap
---
source: starstream-compiler/src/parser/expression/primary/if_expr.rs
description: "Code:\n\nif (flag) { let a = 1; } else { value = value + 1; }\n"
---
Spanned {
    node: If {
        branches: [
            (
                Bool(
                    Spanned {
                        node: ScopedName(
                            [
                                Identifier {
                                    name: "flag",
                                    span: 4..8,
                                },
                            ],
                        ),
                        span: 4..8,
                    },
                ),
                Block {
                    statements: [
                        Spanned {
                            node: VariableDeclaration {
                                public: false,
                                mutable: false,
                                name: Identifier {
                                    name: "a",
                                    span: 16..17,
                                },
                                ty: None,
                                value: Spanned {
                                    node: Literal(
                                        Integer(
                                            IntegerLiteral {
                                                digits: "1",
                                                radix: Decimal,
                                            },
                                        ),
                                    ),
                                    span: 20..21,
                                },
                            },
                            span: 12..23,
                        },
                    ],
                    tail_expression: None,
                    span: 10..25,
                },
            ),
        ],
        else_branch: Some(
            Block {
                statements: [
                    Spanned {
                        node: Assignment {
                            target: Identifier {
                                name: "value",
                                span: 32..37,
                            },
                            value: Spanned {
                                node: Binary {
                                    op: Add,
                                    left: Spanned {
                                        node: ScopedName(
                                            [
                                                Identifier {
                                                    name: "value",
                                                    span: 40..45,
                                                },
                                            ],
                                        ),
                                        span: 40..46,
                                    },
                                    right: Spanned {
                                        node: Literal(
                                            Integer(
                                                IntegerLiteral {
                                                    digits: "1",
                                                    radix: Decimal,
                                                },
                                            ),
                                        ),
                                        span: 48..49,
                                    },
                                },
                                span: 40..49,
                            },
                        },
                        span: 32..51,
                    },
                ],
                tail_expression: None,
                span: 30..53,
            },
        ),
    },
    span: 0..53,
}
