starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__if_expr__tests__if_else_if.snap
---
source: starstream-compiler/src/parser/expression/primary/if_expr.rs
description: "Code:\n\nif (a) { 1 } else if (b) { 2 } else { 3 }\n"
---
Spanned {
    node: If {
        branches: [
            (
                Bool(
                    Spanned {
                        node: ScopedName(
                            [
                                Identifier {
                                    name: "a",
                                    span: 4..5,
                                },
                            ],
                        ),
                        span: 4..5,
                    },
                ),
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "1",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 9..10,
                        },
                    ),
                    span: 7..13,
                },
            ),
            (
                Bool(
                    Spanned {
                        node: ScopedName(
                            [
                                Identifier {
                                    name: "b",
                                    span: 22..23,
                                },
                            ],
                        ),
                        span: 22..23,
                    },
                ),
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "2",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 27..28,
                        },
                    ),
                    span: 25..31,
                },
            ),
        ],
        else_branch: Some(
            Block {
                statements: [],
                tail_expression: Some(
                    Spanned {
                        node: Literal(
                            Integer(
                                IntegerLiteral {
                                    digits: "3",
                                    radix: Decimal,
                                },
                            ),
                        ),
                        span: 38..39,
                    },
                ),
                span: 36..42,
            },
        ),
    },
    span: 0..42,
}
