starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__if_expr__tests__if_is_basic.snap
---
source: starstream-compiler/src/parser/expression/primary/if_expr.rs
description: "Code:\n\nif x is MyAbi { 1 } else { 2 }\n"
---
Spanned {
    node: If {
        branches: [
            (
                Is {
                    name: Identifier {
                        name: "x",
                        span: 3..4,
                    },
                    abi_name: Identifier {
                        name: "MyAbi",
                        span: 8..13,
                    },
                },
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "1",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 16..17,
                        },
                    ),
                    span: 14..20,
                },
            ),
        ],
        else_branch: Some(
            Block {
                statements: [],
                tail_expression: Some(
                    Spanned {
                        node: Literal(
                            Integer(
                                IntegerLiteral {
                                    digits: "2",
                                    radix: Decimal,
                                },
                            ),
                        ),
                        span: 27..28,
                    },
                ),
                span: 25..31,
            },
        ),
    },
    span: 0..31,
}
