starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__if_expr__tests__if_is_chain.snap
---
source: starstream-compiler/src/parser/expression/primary/if_expr.rs
description: "Code:\n\nif x is AbiA { 1 } else if x is AbiB { 2 } else { 3 }\n"
---
Spanned {
    node: If {
        branches: [
            (
                Is {
                    name: Identifier {
                        name: "x",
                        span: 3..4,
                    },
                    abi_name: Identifier {
                        name: "AbiA",
                        span: 8..12,
                    },
                },
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "1",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 15..16,
                        },
                    ),
                    span: 13..19,
                },
            ),
            (
                Is {
                    name: Identifier {
                        name: "x",
                        span: 27..28,
                    },
                    abi_name: Identifier {
                        name: "AbiB",
                        span: 32..36,
                    },
                },
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "2",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 39..40,
                        },
                    ),
                    span: 37..43,
                },
            ),
        ],
        else_branch: Some(
            Block {
                statements: [],
                tail_expression: Some(
                    Spanned {
                        node: Literal(
                            Integer(
                                IntegerLiteral {
                                    digits: "3",
                                    radix: Decimal,
                                },
                            ),
                        ),
                        span: 50..51,
                    },
                ),
                span: 48..54,
            },
        ),
    },
    span: 0..54,
}
