starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__if_expr__tests__if_is_mixed.snap
---
source: starstream-compiler/src/parser/expression/primary/if_expr.rs
description: "Code:\n\nif x is AbiA { 1 } else if (flag) { 2 } else { 3 }\n"
---
Spanned {
    node: If {
        branches: [
            (
                Is {
                    name: Identifier {
                        name: "x",
                        span: 3..4,
                    },
                    abi_name: Identifier {
                        name: "AbiA",
                        span: 8..12,
                    },
                },
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "1",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 15..16,
                        },
                    ),
                    span: 13..19,
                },
            ),
            (
                Bool(
                    Spanned {
                        node: ScopedName(
                            [
                                Identifier {
                                    name: "flag",
                                    span: 28..32,
                                },
                            ],
                        ),
                        span: 28..32,
                    },
                ),
                Block {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: Literal(
                                Integer(
                                    IntegerLiteral {
                                        digits: "2",
                                        radix: Decimal,
                                    },
                                ),
                            ),
                            span: 36..37,
                        },
                    ),
                    span: 34..40,
                },
            ),
        ],
        else_branch: Some(
            Block {
                statements: [],
                tail_expression: Some(
                    Spanned {
                        node: Literal(
                            Integer(
                                IntegerLiteral {
                                    digits: "3",
                                    radix: Decimal,
                                },
                            ),
                        ),
                        span: 47..48,
                    },
                ),
                span: 45..51,
            },
        ),
    },
    span: 0..51,
}
